[package]
name = "ez-rke"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.17"
colored = "2.1.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
flume = "0.11.0"
futures = "0.3.30"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["rc"] }
tokio = { version = "1.40.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tui-logger = { version = "0.12.0", features = ["tracing", "tracing-subscriber"] }
